--- a/info.html
+++ b/info.html
@@ -15,7 +15,7 @@
 
     <h1><u>Karachi</u></h1>
     <p>Karachi is the capital city of the Pakistani province of Sindh. It is the largest city in Pakistan and 12th largest in the world, with a population of over 20 million. It is situated at the southern tip of the country along the Arabian Sea coast and formerly served as the country's capital from 1947 to 1959.</p>
-    <img src="img/khi1.jpeg" alt="" height="200" width="300">
+    <img src="khi1.jpeg" alt="" height="200" width="300">
     <img src="img/khi2.jpeg" alt="" height="200" width="300">
     <img src="img/khi3.jpeg" alt="" height="200" width="300">
     <img src="img/khi4.jpeg" alt="" height="200" width="300">
