--- a/info.html
+++ b/info.html
@@ -16,24 +16,24 @@
     <h1><u>Karachi</u></h1>
     <p>Karachi is the capital city of the Pakistani province of Sindh. It is the largest city in Pakistan and 12th largest in the world, with a population of over 20 million. It is situated at the southern tip of the country along the Arabian Sea coast and formerly served as the country's capital from 1947 to 1959.</p>
     <img src="khi1.jpeg" alt="" height="200" width="300">
-    <img src="img/khi2.jpeg" alt="" height="200" width="300">
-    <img src="img/khi3.jpeg" alt="" height="200" width="300">
-    <img src="img/khi4.jpeg" alt="" height="200" width="300">
+    <img src="khi2.jpeg" alt="" height="200" width="300">
+    <img src="khi3.jpeg" alt="" height="200" width="300">
+    <img src="khi4.jpeg" alt="" height="200" width="300">
 
 
 
     <h1><u>Lahore</u></h1>
     <p>Lahore is the capital and largest city of the Pakistani province of Punjab. It is the second largest city in Pakistan, after Karachi, and 26th largest in the world, with a population of over 13 million. Located in central-eastern Punjab, along the River Ravi, it is the largest Punjabi-speaking city in the world.</p>
-    <img src="img/lah1.jpeg" alt="" height="200" width="300">
-    <img src="img/lah2.jpeg" alt="" height="200" width="300">
-    <img src="img/lah3.jpeg" alt="" height="200" width="300">
-    <img src="img/lah4.jpeg" alt="" height="200" width="300">
+    <img src="lah1.jpeg" alt="" height="200" width="300">
+    <img src="lah2.jpeg" alt="" height="200" width="300">
+    <img src="lah3.jpeg" alt="" height="200" width="300">
+    <img src="lah4.jpeg" alt="" height="200" width="300">
 
 
     <h1><u>Islamabad</u></h1>
     <p>Islamabad is the capital city of Pakistan. It is the country's tenth-most populous city with a population of 1,108,872 people and is federally administered by the Pakistani government as part of the Islamabad Capital Territory.</p>
-    <img src="img/islamabad1.jpg" alt="" height="200" width="300">
-    <img src="img/islamabad2.jpeg" alt="" height="200" width="300">
+    <img src="islamabad1.jpg" alt="" height="200" width="300">
+    <img src="islamabad2.jpeg" alt="" height="200" width="300">
     
 </body>
 </html>
