--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
 
     <h1>Loreum Ipsum</h1>
     <p><b>Lorem ipsum</b> dolor sit, amet consectetur adipisicing elit. <u>Facere rerum vel minima quae qui odit.</u> Qui, harum autem impedit nisi, incidunt, <i>soluta tempora a fugiat perferendis rem cupiditate. Aliquid, corrupti. Lorem ipsum dolor sit amet consectetur adipisicing elit.</i> Ab nihil molestiae voluptatum blanditiis saepe. Quisquam, aspernatur, cupiditate,<del> ex autem eius vel nobis at asperiores omnis magnam nihil reiciendis neque sed! Lorem ipsum dolor sit</del> amet consectetur adipisicing elit. Repellendus expedita mollitia laudantium, explicabo voluptatum facere error temporibus omnis repellat accusantium corrupti dicta natus, suscipit nesciunt ratione fugit magnam asperiores vero.</p>
-    <img src="img/img1.jpeg" alt="" height="100%" width="100%">
+    <img src="img1.jpeg" alt="" height="100%" width="100%">
     
 </body>
 </html>
