--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
     </ul>
 
     <h1>Contact Us</h1>
-    &#9993; <a href="mailto:abcd@gmail.com"> abcd@gmail.com </a><br>
+    &#9993; <a href="mailto:abcd@gmail.com"> abdussamadrana8@gmail.com </a><br>
     &#9990; <a href="tell:03202060165">03202060165</a>
 </body>
 </html>
